Get Order page layout bug fixed

--- a/src/css/Loading.css
+++ b/src/css/Loading.css
@@ -1,4 +1,4 @@
-.content__wrapper {
+.loading__wrapper {
     width: 100%;
     height: 72.5vh;
     display: flex;
